IMC-2393: Fix ConsentManager Broken on IE (#978)

--- a/client/app/components/ConsentManager/index.scss
+++ b/client/app/components/ConsentManager/index.scss
@@ -1,5 +1,6 @@
 :local {
   .ConsentManager {
+    width: 100%;
     position: fixed;
     bottom: 0;
     z-index: 1000;
